# Conway-s-GameOfLife

./: CMakeLists.txt  CMakePresets.json  README.md
Templates/: gosper_glider_gun.temp
head/: Controls.h  GameOfLife.h  Screen.h  TemplateSelector.h
head/screen/: ConsoleScreen.hpp  Data.hpp  RaylibScreen.hpp  ScreenIF.hpp  WinApiScreen.h
src/: GameOfLife.cc  Screen.cc  WinMain.cc  main.cc
src/Controls/: Shared.cc  unix.cc  win32.cc
src/screen/: ConsoleScreen.cc  RaylibScreen.cc  WinApiScreen.cc
